# lexindex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/betula_index/: __init__.py  __init__.pyi
src/: arena.rs  lib.rs  perfect_hash.rs  python.rs  string_index.rs
tests/: integration.rs  test_python.py
