[package]
name = "betula-index"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Compact, immutable string↔id indexes for huge catalogs: ordered FST lookup with prefix/range queries, plus a minimal-perfect-hash dictionary."
authors = ["Ilia Gradina <ilia.gradina@gmail.com>"]
repository = "https://github.com/ilgrad/betula-index"
readme = "README.md"
keywords = ["index", "fst", "perfect-hash", "prefix", "catalog"]
categories = ["data-structures", "text-processing"]

[dependencies]
fst = "0.4"
ptr_hash = { version = "1.1", optional = true }

[features]
default = ["mph"]
# Minimal-perfect-hash dictionary (`PerfectHashIndex`), backed by the `ptr_hash` crate.
mph = ["dep:ptr_hash"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
